--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #f0f0f0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root {
+  --color-primary: #00925d;
+
+  /* Customine variables themes */
+  --variant-textColor: #00925d !important;
+  --variant-outlinedColor: #00925d !important;
+  --variant-outlinedBorder: #00925d80 !important;
+  --variant-containedColor: #fff !important;
+  --variant-containedBg: #00925d !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.slick-next {
+  right: 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.slick-next::before {
+  font-size: 28px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.slick-prev {
+  z-index: 9;
+  left: 16px;
+}
+
+.slick-prev::before {
+  font-size: 28px;
 }
