--- a/src/pages/detail/Detail.scss
+++ b/src/pages/detail/Detail.scss
@@ -20,6 +20,7 @@
           max-height: 400px;
 
           img {
+            min-height: 400px;
             max-height: 400px;
             object-fit: cover;
           }
