--- a/src/pages/admin/dashboard/Dashboard.scss
+++ b/src/pages/admin/dashboard/Dashboard.scss
@@ -26,6 +26,29 @@
       .title {
         margin-bottom: 24px;
       }
+
+      .gallery-photo {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 8px;
+
+        .gallery-item {
+          aspect-ratio: 16/9;
+
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 8px;
+          }
+        }
+
+        .upload-image {
+          border: 1px dashed gray;
+          border-radius: 8px;
+          display: grid;
+          aspect-ratio: 16/9;
+        }
+      }
     }
   }
 }
