--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -14,16 +14,20 @@
   }
 
   .home-container {
-    max-width: 750px;
+    max-width: 1050px;
     padding: 1rem 0;
     margin: auto;
     display: flex;
-    flex-direction: column;
     gap: 1rem;
-    align-items: center;
 
     .news-feed {
       min-width: 750px;
+    }
+
+    .list-donate {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
   }
 }
